# EasyPrefect

./: .dockerignore  .gitignore  Dockerfile  README.md  config.prod.yaml  config.yaml  docker-compose.server.yml  docker-compose.yml  flow-release.sh  main.py  pyproject.toml  release-image.sh
core/: env.py  settings.py
core/db/: __init__.py  clickhouse.py  clickhouse_loader.py
core/logging/: __init__.py  stat_logger.py
example/: .env.example
modules/hello_world/: deploy.yaml  flow.py
modules/tushare_balancesheet/: deploy.yaml  flow.py
modules/tushare_cashflow/: deploy.yaml  flow.py
modules/tushare_ci_daily/: __init__.py  deploy.yaml  flow.py
modules/tushare_ci_index_member/: __init__.py  deploy.yaml  flow.py
modules/tushare_cn_cpi/: __init__.py  deploy.yaml  flow.py
modules/tushare_cn_m/: __init__.py  deploy.yaml  flow.py
modules/tushare_cn_pmi/: __init__.py  deploy.yaml  flow.py
modules/tushare_cn_ppi/: __init__.py  deploy.yaml  flow.py
modules/tushare_cyq_chips/: __init__.py  deploy.yaml  flow.py
modules/tushare_cyq_perf/: __init__.py  deploy.yaml  flow.py
modules/tushare_daily_basic/: __init__.py  deploy.yaml  flow.py
modules/tushare_dividend/: deploy.yaml  flow.py
modules/tushare_fina_indicator/: __init__.py  deploy.yaml  flow.py
modules/tushare_fina_mainbz/: __init__.py  deploy.yaml  flow.py
modules/tushare_income/: deploy.yaml  flow.py
modules/tushare_index_basic/: __init__.py  deploy.yaml  flow.py
modules/tushare_index_daily/: __init__.py  deploy.yaml  flow.py
scripts/: check_clickhouse.py  deploy_work_pool.py
(+40 files in other folders)
