[project]
name = "easyprefect"
version = "0.1.0"
description = "A minimal Prefect 3 project skeleton"
requires-python = ">=3.14"
dependencies = [
    "pandas-stubs~=3.0.3",
    "prefect>=3.6.28",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tushare>=1.4.29",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
